Corrected the "gap" on "content" selector

--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ gap: 10px;
     margin-top: 100px;
     margin-bottom: 100px;
     justify-content: space-between;
-    gap: 200px;
+    gap: 50px;
 }
 
 .placeholder{
